testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try11.adl
CONTEXT Try11 IN ENGLISH

PURPOSE PATTERN Try11 IN ENGLISH 
{+
This pattern is meant to test the translation of Rules in Ampersand.
+}

PATTERN Try11
  RELATION r[A*A]
  RELATION s[A*A]
  RELATION t[A*A]
ENDPATTERN

RULE Test : -(r\/s)
RULE Test : t|-s

ENDCONTEXT

{- 
   Purpose: to check that uniqueness of RULE names are tested.
   Result: FAIL
   Reason: on line 16 and 17 there are two rules with the same name.
   
   Message:
C:> ampersand check Try11.adl
Reading file /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try11.adl
/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try11.adl:14:1 error:
  Every rule must have a unique name. "Test", however, is used at:/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try11.adl:14:1
      /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try11.adl:15:1.
ExitFailure 10
C:>
-}